--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <nav>
+      <ul id="menu">
+        <li>Bio</li>
+        <li>Portfolio</li>
+        <li>Contact</li>
+      </ul>
     </nav>
     <section id="bio">
       <h1> About Me</h1>
